--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "desafio-pushstart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://viwnj.github.io/desafio-pushstart/",
   "dependencies": {
-    "@babel/plugin-syntax-throw-expressions": "^7.0.0",
-    "jquery": "^3.3.1",
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "youtube-player": "^5.5.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
